update MutatingWebhook apiVersion to v1 and other minor fixes (#24723)
Co-authored-by: John Howard <howardjohn@google.com>

Co-authored-by: John Howard <howardjohn@google.com>

--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -623,7 +623,7 @@ data:
 ---
 # Source: istiod-remote/templates/mutatingwebhook.yaml
 # Installed for each revision - not installed for cluster resources ( cluster roles, bindings, crds)
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: istio-sidecar-injector-default
@@ -638,7 +638,9 @@ webhooks:
         name: istiod
         namespace: istio-system
         path: "/inject"      
-      caBundle: 
+      caBundle: ""
+    sideEffects: None
+    admissionReviewVersions: ["v1", "v1beta1"]
     rules:
       - operations: [ "CREATE" ]
         apiGroups: [""]
