TLS Origination using SDS Integration Test Suite (#25520)
* init test

* clear clutter

* tests pass

* add copyrights

* fix pilt

* not sure what this gen check error is

* try removing pilot

* make gen

* lint

* comment code

* init mutual TLS mode

* add unknown secret test

* finish mtls test draft

* lint

* new test

* add more tests

* verify client cert

* lint

* refactor

* make genn

* increase retry

* fix env

* remove timeout

* try this

* add wait

* sleep is good

* test failing

* verifycert

* another try

* fix template

* decrease to reasonable time

* revert old

* reduce time hack

* revert client file

* remove sleep and increase timeout

* fix comment

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -55,8 +55,10 @@ features:
       tls:
     egress:
       mtls:
+        sds:
       tls:
         filebased:
+        sds:
     control-plane:
       k8s-certs:
       plugin-cert:
