--- a/manifests/charts/istio-cni/templates/daemonset.yaml
+++ b/manifests/charts/istio-cni/templates/daemonset.yaml
@@ -61,7 +61,7 @@ spec:
 {{- if or .Values.cni.pullPolicy .Values.global.imagePullPolicy }}
           imagePullPolicy: {{ .Values.cni.pullPolicy | default .Values.global.imagePullPolicy }}
 {{- end }}
-          command: ["/usr/local/bin/install-cni"]
+          command: ["install-cni"]
           env:
 {{- if .Values.cni.cniConfFileName }}
             # Name of the CNI config file to create.
