Port Install CNI to golang (#25332)
* Port CNI installer from shell to golang

* Capitalize acronyms in constant names

* Decouple environment variables from functions

* Make variable and function names more clear

* Convert array to set

* Fix filepath bug in tests

* Wait until main CNI config file exists to intall Istio CNI as a chained CNI plugin

* Add check install and cleanup; Keep container alive

* Cleanup on SIGINT and SIGTERM caused by killing container

* Refactor, clean up, add comments

* Sort test data JSON map keys and update cniVersions

* Remove unnecessary prefix characters for creating temp dirs

* Fix and clean up unit tests

* Extend context to createCNIConfigFile; Add unit test

* Remove relative paths and clean up CNI config e2e tests

* Fix lint errors

* Fix kubeconfig template; Add unit tests for creating kubeconfig file

* Remove install-cni.sh and dependencies; Update Dockerfile and charts

* Write kubeconfig file with default 0600 permissions

* Test script restart in CNI config integration test; cleanup

* Add unit test for checkInstall

* Add helper functions to handle json unmarshalling panic; add unit tests

* Address PR comments; cleanup

* Add test cases for standalone CNI plugin in integration tests

* Add make target for install-cni integration test

* Address PR comments; cleanup

* Decouple signal handling from install process

* Add Installer struct and refactor

* Fix lint error

* Remove absolute path to install-cni binary

Co-authored-by: Jonh Wendell <jonh.wendell@redhat.com>

--- a/cni/deployments/kubernetes/Dockerfile.install-cni
+++ b/cni/deployments/kubernetes/Dockerfile.install-cni
@@ -8,8 +8,7 @@ jq='1.5*' \
 
 COPY istio-cni /opt/cni/bin/
 COPY istio-iptables /opt/cni/bin/
-COPY install-cni.sh /install-cni.sh
-COPY filter.jq /filter.jq
+COPY install-cni /usr/local/bin/
 COPY istio-cni.conf.default /istio-cni.conf.tmp
 
 # Copy over the Repair binary
@@ -17,4 +16,4 @@ COPY istio-cni-repair /opt/cni/bin/
 
 ENV PATH=$PATH:/opt/cni/bin
 WORKDIR /opt/cni/bin
-CMD ["/install-cni.sh"]
+CMD ["/usr/local/bin/install-cni"]
