--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -44,7 +44,16 @@ features:
       loadbalancing:
   usability:
     observability:
+      describe:
+      version:
+      wait:
       status:
+      proxy-config:
+      proxy-status:
+      authz-check:
+    helpers:
+      add-to-mesh:
+      remove-from-mesh:
   # features that allow users to secure their services and service mesh.
   security:
     peer:
