--- a/manifests/charts/istio-policy/values.yaml
+++ b/manifests/charts/istio-policy/values.yaml
@@ -117,7 +117,6 @@ global:
   # ImagePullSecrets will be added to the corresponding Deployment(StatefulSet) objects.
   # Must be set for any cluster configured with private docker registry.
   imagePullSecrets: []
-  # - private-registry-key
 
   # Comma-separated minimum per-scope logging level of messages to output, in the form of <scope>:<level>,<scope>:<level>
   # The control plane has different scopes depending on component, but can configure default log level across all components
@@ -165,10 +164,8 @@ global:
   controlPlaneSecurityEnabled: true
 
   # Used to locate istio-pilot.
-  # Default is to install pilot in a dedicated namespace, istio-pilot11. You can use multiple namespaces, but
+  # Default is to install pilot in a dedicated namespace. You can use multiple namespaces, but
   # for each 'profile' you need to match the control plane namespace and the value of istioNamespace
-  # It is assumed that istio-system is running either 1.0 or an upgraded version of 1.1, but only security components are
-  # used (citadel generating the secrets).
   istioNamespace: istio-system
 
   # Configure the policy for validating JWT.
