mode create to controller

--- a/samples/addons/prometheus.yaml
+++ b/samples/addons/prometheus.yaml
@@ -484,6 +484,7 @@ spec:
         - name: config-volume
           configMap:
             name: prometheus
+            optional: true
         - name: file-sd-volume
           configMap:
             name: file-sd-config
