--- a/releasenotes/notes/25669.yaml
+++ b/releasenotes/notes/25669.yaml
@@ -5,10 +5,9 @@ issue:
 - 25333
 - 24300
 releaseNotes: |
-*Removed* all Mixer-related features and functionality (includes istio-policy and
-istio-telemetry services and deployments, as well as Mixer-focused CRDs and 
-configuration resources). This is a scheduled removal of a deprecated Istio
-component and related functionality.
+  *Removed* all Mixer-related features and functionality. This is a scheduled
+  removal of a deprecated Istio services and deployments, as well as
+  Mixer-focused CRDs and component and related functionality.
  
 upgradeNotes: |
   Mixer is no longer supported in Istio.
