--- a/manifests/charts/istio-telemetry/mixer-telemetry/values.yaml
+++ b/manifests/charts/istio-telemetry/mixer-telemetry/values.yaml
@@ -159,7 +159,7 @@ global:
   hub: gcr.io/istio-testing
 
   # Default tag for Istio images.
-  tag: latest
+  tag: 1.7-dev
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
