--- a/manifests/charts/global.yaml
+++ b/manifests/charts/global.yaml
@@ -36,7 +36,7 @@ global:
   hub: gcr.io/istio-testing
 
   # Default tag for Istio images.
-  tag: latest
+  tag: 1.7-dev
 
   # Comma-separated minimum per-scope logging level of messages to output, in the form of <scope>:<level>,<scope>:<level>
   # The control plane has different scopes depending on component, but can configure default log level across all components
