add support of revision for operator commands (#25716)
* add support of revision for operator commands

* address comments

* fix lint

--- a/operator/deploy/operator.yaml
+++ b/operator/deploy/operator.yaml
@@ -40,6 +40,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: REVISION
+              value: ""
             - name: OPERATOR_NAME
               value: "istio-operator"
             - name: WAIT_FOR_RESOURCES_TIMEOUT
