--- a/releasenotes/notes/25737.yaml
+++ b/releasenotes/notes/25737.yaml
@@ -4,5 +4,4 @@ area: istioctl
 issue:
   - 25737
 releaseNotes: |
-  *Removed* 
-  - 'istioctl manifest apply' the simpler install command replaces manifest apply.
+  *Removed* `istioctl manifest apply`. The simpler `install` command replaces manifest apply.
