--- a/cni/deployments/kubernetes/Dockerfile.install-cni
+++ b/cni/deployments/kubernetes/Dockerfile.install-cni
@@ -1,15 +1,17 @@
-FROM ubuntu:xenial
+# BASE_DISTRIBUTION is used to switch between the old base distribution and distroless base images
+ARG BASE_DISTRIBUTION=default
+
+# Version is the base image version from the TLD Makefile
+ARG BASE_VERSION=latest
+
+# The following section is used as base image if BASE_DISTRIBUTION=default
+FROM docker.io/istio/base:${BASE_VERSION} as default
 
 LABEL description="Istio CNI plugin installer."
-
-RUN apt-get update && apt-get install -qqy --no-install-recommends \
-jq='1.5*' \
-&& rm -rf /var/lib/apt/lists/*
 
 COPY istio-cni /opt/cni/bin/
 COPY istio-iptables /opt/cni/bin/
 COPY install-cni /usr/local/bin/
-COPY istio-cni.conf.default /istio-cni.conf.tmp
 
 # Copy over the Repair binary
 COPY istio-cni-repair /opt/cni/bin/
