--- a/samples/bookinfo/networking/egress-rule-google-apis.yaml
+++ b/samples/bookinfo/networking/egress-rule-google-apis.yaml
@@ -44,3 +44,4 @@ spec:
         number: 443
       tls:
         mode: SIMPLE # initiates HTTPS when accessing www.googleapis.com
+        caCertificates: /etc/ssl/certs/ca-certificates.crt
