--- a/manifests/charts/istio-control/istio-discovery/values.yaml
+++ b/manifests/charts/istio-control/istio-discovery/values.yaml
@@ -22,9 +22,6 @@ pilot:
       cpu: 500m
       memory: 2048Mi
 
-  # Applications namespace list pilot manages
-  appNamespaces: []
-
   env: {}
 
   cpu:
@@ -36,7 +33,6 @@ pilot:
   enableProtocolSniffingForInbound: true
 
   nodeSelector: {}
-  tolerations: []
   podAnnotations: {}
 
   # You can use jwksResolverExtraRootCA to provide a root certificate
@@ -51,27 +47,6 @@ pilot:
     subscribedResources: []
 
   plugins: []
-
-  # Specify the pod anti-affinity that allows you to constrain which nodes
-  # your pod is eligible to be scheduled based on labels on pods that are
-  # already running on the node rather than based on labels on nodes.
-  # There are currently two types of anti-affinity:
-  #    "requiredDuringSchedulingIgnoredDuringExecution"
-  #    "preferredDuringSchedulingIgnoredDuringExecution"
-  # which denote "hard" vs. "soft" requirements, you can define your values
-  # in "podAntiAffinityLabelSelector" and "podAntiAffinityTermLabelSelector"
-  # correspondingly.
-  # For example:
-  # podAntiAffinityLabelSelector:
-  # - key: security
-  #   operator: In
-  #   values: S1,S2
-  #   topologyKey: "kubernetes.io/hostname"
-  # This pod anti-affinity rule says that the pod requires not to be scheduled
-  # onto a node if that node is already running a pod with label having key
-  # "security" and value "S1".
-  podAntiAffinityLabelSelector: []
-  podAntiAffinityTermLabelSelector: []
 
   # The following is used to limit how long a sidecar can be connected
   # to a pilot. It balances out load across pilot instances at the cost of
@@ -363,8 +338,6 @@ global:
 
   # configure remote pilot and istiod service and endpoint
   remotePilotAddress: ""
-  remotePolicyAddress: ""
-  remoteTelemetryAddress: ""
 
   ##############################################################################################
   # The following values are found in other charts. To effectively modify these values, make   #
@@ -464,10 +437,6 @@ global:
   # Istiod is the default
   pilotCertProvider: istiod
 
-  # Namespaces for Istio components
-  telemetryNamespace: istio-system
-  policyNamespace: istio-system
-
   sds:
     # The JWT token for SDS and the aud field of such JWT. See RFC 7519, section 4.1.3.
     # When a CSR is sent from Istio Agent to the CA (e.g. Istiod), this aud is to make sure the
@@ -505,7 +474,7 @@ global:
     zipkin:
       # Host:Port for reporting trace data in zipkin format. If not specified, will default to
       # zipkin service (port 9411) in the same namespace as the other istio components.
-      address: ""
+      address: "zipkin:9411"
 
   # The trust domain corresponds to the trust root of a system
   # Refer to https://github.com/spiffe/spiffe/blob/master/standards/SPIFFE-ID.md#21-trust-domain
