--- a/manifests/charts/istiod-remote/templates/configmap.yaml
+++ b/manifests/charts/istiod-remote/templates/configmap.yaml
@@ -3,16 +3,6 @@
     # Refer to https://github.com/spiffe/spiffe/blob/master/standards/SPIFFE-ID.md#21-trust-domain
     trustDomain: {{ .Values.global.trustDomain | quote }}
 
-    {{- if .Values.global.useMCP }}
-    configSources:
-    {{- if .Values.pilot.configSource.subscribedResources }}
-      subscribedResources:
-    {{- range .Values.pilot.configSource.subscribedResources }}
-        - {{ . }}
-    {{- end }}
-    {{- end }}
-    {{- end }}
-
     defaultConfig:
       tracing:
       {{- if eq .Values.global.proxy.tracer "lightstep" }}
@@ -24,15 +14,11 @@
       {{- else if eq .Values.global.proxy.tracer "zipkin" }}
         zipkin:
           # Address of the Zipkin collector
-        {{- if .Values.global.tracer.zipkin.address }}
-          address: {{ .Values.global.tracer.zipkin.address }}
-        {{- else }}
-          address: zipkin.{{ .Values.global.telemetryNamespace }}:9411
-        {{- end }}
+          address: {{ .Values.global.tracer.zipkin.address | default "zipkin:9411" }}
       {{- else if eq .Values.global.proxy.tracer "datadog" }}
         datadog:
           # Address of the Datadog Agent
-          address: {{ .Values.global.tracer.datadog.address }}
+          address: {{ .Values.global.tracer.datadog.address | default "$(HOST_IP):8126" }}
       {{- else if eq .Values.global.proxy.tracer "stackdriver" }}
         stackdriver:
           # enables trace output to stdout.
@@ -41,15 +27,15 @@
         {{- end }}
         {{- if $.Values.global.tracer.stackdriver.maxNumberOfAttributes }}
           # The global default max number of attributes per span.
-          maxNumberOfAttributes: {{ $.Values.global.tracer.stackdriver.maxNumberOfAttributes }}
+          maxNumberOfAttributes: {{ $.Values.global.tracer.stackdriver.maxNumberOfAttributes | default "200" }}
         {{- end }}
         {{- if $.Values.global.tracer.stackdriver.maxNumberOfAnnotations }}
           # The global default max number of annotation events per span.
-          maxNumberOfAnnotations: {{ $.Values.global.tracer.stackdriver.maxNumberOfAnnotations }}
+          maxNumberOfAnnotations: {{ $.Values.global.tracer.stackdriver.maxNumberOfAnnotations | default "200" }}
         {{- end }}
         {{- if $.Values.global.tracer.stackdriver.maxNumberOfMessageEvents }}
           # The global default max number of message events per span.
-          maxNumberOfMessageEvents: {{ $.Values.global.tracer.stackdriver.maxNumberOfMessageEvents }}
+          maxNumberOfMessageEvents: {{ $.Values.global.tracer.stackdriver.maxNumberOfMessageEvents | default "200" }}
         {{- end }}
       {{- end }}
 
@@ -65,7 +51,6 @@
 {{- $originalMesh := include "mesh" . | fromYaml }}
 {{- $mesh := mergeOverwrite $originalMesh .Values.meshConfig }}
 
-{{- if not .Values.global.centralIstiod }}
 {{- if .Values.pilot.configMap }}
 apiVersion: v1
 kind: ConfigMap
@@ -93,5 +78,4 @@ data:
 {{- include "mesh" . }}
 {{- end }}
 ---
-{{- end }}
 {{- end }}
