--- a/manifests/profiles/default.yaml
+++ b/manifests/profiles/default.yaml
@@ -193,18 +193,10 @@ spec:
       operatorManageWebhooks: false
       controlPlaneSecurityEnabled: true
       tracer:
-        lightstep:
-          address: ""                # example: lightstep-satellite:443
-          accessToken: ""            # example: abcdefg1234567
-        zipkin:
-          address: ""
-        datadog:
-          address: "$(HOST_IP):8126"
-        stackdriver:
-          debug: false
-          maxNumberOfAttributes: 200
-          maxNumberOfAnnotations: 200
-          maxNumberOfMessageEvents: 200
+        lightstep: {}
+        zipkin: {}
+        datadog: {}
+        stackdriver: {}
       imagePullSecrets: []
       arch:
         amd64: 2
@@ -235,7 +227,6 @@ spec:
       sts:
         servicePort: 0
       meshNetworks: {}
-      enableHelmTest: false
       mountMtlsCerts: false
     base:
       enableCRDTemplates: false
@@ -247,27 +238,18 @@ spec:
       replicaCount: 1
       image: pilot
       traceSampling: 1.0
-      configNamespace: istio-config
-      appNamespaces: []
       env: {}
       cpu:
         targetAverageUtilization: 80
       nodeSelector: {}
-      tolerations: []
-      podAntiAffinityLabelSelector: []
-      podAntiAffinityTermLabelSelector: []
       keepaliveMaxServerConnectionAge: 30m
       enableProtocolSniffingForOutbound: true
       enableProtocolSniffingForInbound: true
       deploymentLabels:
       configMap: true
-      policy:
-        enabled: false
 
     telemetry:
       enabled: true
-      v1:
-        enabled: false
       v2:
         enabled: true
         metadataExchange: {}
