--- a/operator/cmd/mesh/testdata/manifest-generate/output/pilot_merge_meshconfig.golden.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/pilot_merge_meshconfig.golden.yaml
@@ -22,8 +22,7 @@ data:
         TERMINATION_DRAIN_DURATION_SECONDS: "120"
       tracing:
         zipkin:
-          address: zipkin.istio-system:9411
-    disableMixerHttpReports: true
+          address: zipkin:9411
     enablePrometheusMerge: true
     mixerCheckServer: foo:1234
     outboundTrafficPolicy:
