--- a/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
+++ b/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
@@ -39,7 +39,7 @@ data:
         DNS_AGENT: ""
       tracing:
         zipkin:
-          address: zipkin:9411
+          address: zipkin.istio-system:9411
     enablePrometheusMerge: true
     rootNamespace: istio-system
     trustDomain: cluster.local
@@ -172,7 +172,7 @@ data:
             "maxNumberOfMessageEvents": 200
           },
           "zipkin": {
-            "address": "zipkin:9411"
+            "address": ""
           }
         },
         "trustDomain": "cluster.local",
