--- a/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
@@ -7954,7 +7954,7 @@ data:
         DNS_AGENT: ""
       tracing:
         zipkin:
-          address: zipkin:9411
+          address: zipkin.istio-system:9411
     enablePrometheusMerge: true
     rootNamespace: istio-system
     trustDomain: cluster.local
@@ -8086,7 +8086,7 @@ data:
             "maxNumberOfMessageEvents": 200
           },
           "zipkin": {
-            "address": "zipkin:9411"
+            "address": ""
           }
         },
         "trustDomain": "cluster.local",
