--- a/operator/cmd/mesh/testdata/manifest-generate/output/pilot_default.golden.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/pilot_default.golden.yaml
@@ -944,7 +944,7 @@ data:
         DNS_AGENT: ""
       tracing:
         zipkin:
-          address: zipkin:9411
+          address: zipkin.istio-system:9411
     enablePrometheusMerge: true
     rootNamespace: istio-control
     trustDomain: cluster.local
@@ -1076,7 +1076,7 @@ data:
             "maxNumberOfMessageEvents": 200
           },
           "zipkin": {
-            "address": "zipkin:9411"
+            "address": ""
           }
         },
         "trustDomain": "cluster.local",
